@@ -364,19 +364,18 @@ typedef struct rcoption {
 #define REBIND_KEYPAD		(1<<16)
 #define NO_CONVERT		(1<<17)
 #define BACKUP_FILE		(1<<18)
-#define NO_RCFILE		(1<<19)
-#define NO_COLOR_SYNTAX		(1<<20)
-#define PRESERVE		(1<<21)
-#define HISTORYLOG		(1<<22)
-#define RESTRICTED		(1<<23)
-#define SMART_HOME		(1<<24)
-#define WHITESPACE_DISPLAY	(1<<25)
-#define MORE_SPACE		(1<<26)
-#define TABS_TO_SPACES		(1<<27)
-#define QUICK_BLANK		(1<<28)
-#define WORD_BOUNDS		(1<<29)
-#define NO_NEWLINES		(1<<30)
-#define BOLD_TEXT		(1<<31)
+#define NO_COLOR_SYNTAX		(1<<19)
+#define PRESERVE		(1<<20)
+#define HISTORYLOG		(1<<21)
+#define RESTRICTED		(1<<22)
+#define SMART_HOME		(1<<23)
+#define WHITESPACE_DISPLAY	(1<<24)
+#define MORE_SPACE		(1<<25)
+#define TABS_TO_SPACES		(1<<26)
+#define QUICK_BLANK		(1<<27)
+#define WORD_BOUNDS		(1<<28)
+#define NO_NEWLINES		(1<<29)
+#define BOLD_TEXT		(1<<30)
 
 /* Control key sequences.  Changing these would be very, very bad. */
 #define NANO_CONTROL_SPACE 0
